--- a/page-about.html
+++ b/page-about.html
@@ -2,15 +2,8 @@
 <html>
 	<head>
 		<meta charset='utf-8'>
-		<title>Home</title>
+		<title>About</title>
 		<link href="styles/main.css" rel="stylesheet">
-		<script type="text/javascript" language="javascript">
-			window.onload = function() {
-				setInterval(function() {
-					document.getElementById("Time").innerHTML = new Date();
-				}, 100);
-			}
-		</script>
 	</head>
 	<body>
 		<div>
@@ -18,7 +11,7 @@
 				Ihsoh
 			</div>
 			<div class="Top-Item-Separator">&nbsp;</div>
-			<div class="Top-Item Top-Item-Selected">
+			<div class="Top-Item">
 				<a href="index.html">Home</a>
 			</div>
 			<div class="Top-Item-Separator">&nbsp;</div>
@@ -26,31 +19,38 @@
 				<a href="page-isystemx86.html">ISystem x86</a>
 			</div>
 			<div class="Top-Item-Separator">&nbsp;</div>
-			<div class="Top-Item">
+			<div class="Top-Item Top-Item-Selected">
 				<a href="page-about.html">About</a>
 			</div>
 			<br clear="all" />
 		</div>
 
 		<div id="Banner">
-			<div id="Banner-Title">Welcome! :)</div>
+			<div id="Banner-Title">:)</div>
 			<br clear="all" />
 			<div id="Banner-Content">
-				<span id="Time"></span>
+				> start_
 			</div>
 			<br clear="all" />
 		</div>
 
 		<div id="Content">
-			<h1>Projects</h1>
+			<h1>Me</h1>
 			<br />
 			<br />
 			<p>
-				<ul>
-					<li><a href="https://github.com/Ihsoh/isystemx86" target="_blank">ISystem x86</a></li>
-					<li><a href="https://github.com/Ihsoh/iscript" target="_blank">IScript</a></li>
-					<li><a href="https://github.com/Ihsoh/IBasic-Prototype-Py" target="_blank">IBasic</a></li>
-				</ul>
+			My hobby is coding operating system. my favorite language is C. :)
+			</p>
+			<br />
+			<br />
+			<br />
+			<br />
+
+			<h1>Email</h1>
+			<br />
+			<br />
+			<p>
+			ihsoh@outlook.com
 			</p>
 			<br />
 			<br />
