--- a/page-isystemx86.html
+++ b/page-isystemx86.html
@@ -52,6 +52,15 @@
 			<h1>Screenshot</h1>
 			<br />
 			<br />
+			<img src="images/screenshot/screenshot3.png" alt="GUI" />
+			<br />
+			<br />
+			<img src="images/screenshot/screenshot4.png" alt="Editor" />
+			<br />
+			<br />
+			<img src="images/screenshot/screenshot5.png" alt="Lua" />
+			<br />
+			<br />
 			<img src="images/screenshot/screenshot0.png" alt="Console" />
 			<br />
 			<br />
