--- a/page-isystemx86.html
+++ b/page-isystemx86.html
@@ -49,6 +49,20 @@
 			<br />
 			<br />
 
+			<h1>Download</h1>
+			<br />
+			<br />
+			<p>
+				<a href="http://pan.baidu.com/s/1gd1sjkf" target="_blank">ISystem x86 Alpha Release 1 2015-05-19</a><br /><br />
+				You need Virtual Box or Bochs to run this(.vhd)!<br />
+				Hard disk controller must be a IDE controller!<br />
+				GUI mode is very bad on this version!<br />
+			</p>
+			<br />
+			<br />
+			<br />
+			<br />
+
 			<h1>Screenshot</h1>
 			<br />
 			<br />
