--- a/index.html
+++ b/index.html
@@ -7,10 +7,27 @@
 		<script type="text/javascript" language="javascript">
 			window.onload = function() {
 				setInterval(function() {
-					document.getElementById("Time").innerHTML = new Date();
+					//document.getElementById("Time").innerHTML = new Date();
 				}, 100);
 			}
 		</script>
+		<style type="text/css">
+			#IndexContent
+			{
+				background-image: url(images/index_bg.jpg);
+				height: 500px;
+				text-align: center;
+				float: left;
+				width: 100%;
+				color: white;
+			}
+
+			#IndexContentTitle
+			{
+				font-size: 100px;
+				margin-top: 100px;
+			}
+		</style>
 	</head>
 	<body>
 		<div>
@@ -31,33 +48,21 @@
 			</div>
 			<br clear="all" />
 		</div>
-
-		<div id="Banner">
-			<div id="Banner-Title">Welcome! :)</div>
-			<br clear="all" />
-			<div id="Banner-Content">
-				<span id="Time"></span>
+		<br clear="all" />
+		<div id="IndexContent">
+			<div id="IndexContentTitle">ISystem x86</div>
+			<br />
+			<br />
+			<div style="font-size: 20px; color: #cccccc;">
+				ISystem x86 is a multitasking and x86 based operating system.
 			</div>
-			<br clear="all" />
+			<br />
+			<br />
+			<span style="font-size: 30px; color: white; border-bottom: 1px white solid;">
+				<a href="page-isystemx86.html" style="color:white;">Detail & Download >></a>
+			</span>
 		</div>
-
-		<div id="Content">
-			<h1>Projects</h1>
-			<br />
-			<br />
-			<p>
-				<ul>
-					<li><a href="https://github.com/Ihsoh/isystemx86" target="_blank">ISystem x86</a></li>
-					<li><a href="https://github.com/Ihsoh/iscript" target="_blank">IScript</a></li>
-					<li><a href="https://github.com/Ihsoh/IBasic-Prototype-Py" target="_blank">IBasic</a></li>
-				</ul>
-			</p>
-			<br />
-			<br />
-			<br />
-			<br />
-		</div>
-
+		<br clear="all" />
 		<div id="Footer">
 			Copyright&nbsp;&copy;&nbsp;2015&nbsp;&nbsp;&nbsp;&nbsp;Ihsoh&nbsp;Software
 		</div>
