--- a/page-isystemx86.html
+++ b/page-isystemx86.html
@@ -42,7 +42,7 @@
 				ISystem x86 is a multitasking and x86 based operating system, in development since January of 2014.
 			</p>
 			<p>
-				This requireduiredepository contains the kernel, system applications, user applications and some libraries. nasm and gcc are required to build ISystem x86 if building environment is ubuntu 32-bit. nasm, gcc, ia32-libs and libc-dev-i386 are required if building environment is ubuntu 64-bit.
+				This repository contains the kernel, system applications, user applications and some libraries. nasm and gcc are required to build ISystem x86 if building environment is ubuntu 32-bit. nasm, gcc, ia32-libs and libc-dev-i386 are required if building environment is ubuntu 64-bit.
 			</p>
 			<br />
 			<br />
