--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset='utf-8'>
 		<title>Home</title>
-		<link href="styles/main.css" rel="stylesheet">
+		<link href="styles/main.css" rel="stylesheet" />
 		<script type="text/javascript" language="javascript">
 			window.onload = function() {
 				setInterval(function() {
@@ -11,6 +11,11 @@
 				}, 100);
 			}
 		</script>
+
+		<link href="bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css" />
+		<script src="bootstrap/js/bootstrap.js" type="text/javascript" language="javascript">
+		</script>
+
 		<style type="text/css">
 			#IndexContent
 			{
@@ -29,7 +34,7 @@
 			}
 		</style>
 	</head>
-	<body>
+	<body id="Body">
 		<div>
 			<div id="Top-Logo">
 				Ihsoh
