--- a/page-about.html
+++ b/page-about.html
@@ -3,9 +3,14 @@
 	<head>
 		<meta charset='utf-8'>
 		<title>About</title>
-		<link href="styles/main.css" rel="stylesheet">
+		<link href="styles/main.css" rel="stylesheet"  type="text/css" />
+
+		<link href="bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css" />
+		<script src="bootstrap/js/bootstrap.js" type="text/javascript" language="javascript">
+		</script>
+
 	</head>
-	<body>
+	<body id="Body">
 		<div>
 			<div id="Top-Logo">
 				Ihsoh
